@@ -41,7 +41,6 @@ sub new {
 
     $args{handle}      = $handle;
     $args{log_level} //= $trace_level;
-    $args{format_message} //= 1;
 
     return $class->SUPER::new(%args);
 }
@@ -64,14 +63,16 @@ sub _prepare_log_entry {
 
     confess 'Died: A log message is required' if ! $string;
 
+    my $meth = $self->{localtime} ? 'now' : 'now_utc';
+
     my %log_entry = (
-        time     => Time::Moment->now->strftime('%FT%T%5f'),
+        time     => Time::Moment->$meth->strftime('%FT%T%6f%Z'),
         level    => $level,
         category => $category,
     );
 
-    # Process pattern and values if present
-    if ($self->{format_message} && (my $num_tokens =()= $string =~ m/%s|%d/g) ) {
+    # Process pattern and values if present, unless not wanted
+    if ( ! $self->{without_formatting} && (my $num_tokens =()= $string =~ m/%s|%d/g) ) {
         my @vals = grep { ! ref } splice @items, 0, $num_tokens;
 
         if ( @vals < $num_tokens ) {
@@ -205,25 +206,45 @@ handle to which the entries will be printed.
 Optionally you may pass an C<encoding> argument which will be used to apply
 a C<binmode> layer to the output handle. The default encoding is C<UTF-8>.
 
+Optionally you may turn off string formatting, see below.
+
 =head1 PARAMETERS
- 
+
 =head2 log_level
 
-Set the ninimum logging level to output. Any messages lower than this level
+Set the minimum logging level to output. Any messages lower than this level
 will be discarded. Default is trace.
 
     use Log::Any::Adapter ('JSON', \*STDERR, log_level => 'info');
 
-=head2 format_message
+=head2 encoding
 
-Whether the message should be formatted using sprintf if it contains
-formatting codes such as '%s'. This is enabled by default, but will
-cause the program to die if a message does not contain enough arguments
-to process all the formatting codes in a message. To prevent log messages
-from dependencies or untrusted sources from accidentally crashing the
-program, you might want to disable message formatting if you don't need it:
+Defaults to C<UTF-8>. Pass a different encoding to change the bindmode applied
+to the log output.
 
-    use Log::Any::Adapter ('JSON', \*STDERR, format_message => 0);
+=head2 localtime
+
+By default the message C<time> will be in UTC. If you wish to log using your
+system's localtime instead, set this parameter to a true value. Output will
+look something like:
+
+  2021-05-01T10:01:37.482042-04:00
+
+versus, by default, always something like:
+
+  2021-05-01T10:01:37.482042Z
+
+=head2 without_formatting
+
+By default the message will be formatted using sprintf if it contains
+formatting codes such as '%s'. This will cause the program to die if a
+message does not contain enough arguments to process all the formatting
+codes in a message. If your logs will contain the format codes and should
+not be formatted, or to prevent log messages from dependencies or untrusted
+sources from accidentally crashing the program, you can disable
+message formatting by setting this parameter to a true value:
+
+    use Log::Any::Adapter ('JSON', \*STDERR, without_formatting => 1);
 
 =head1 OUTPUT
 
@@ -275,7 +296,7 @@ Output is a B<single line> with JSON like:
     "category":"main",
     "level":"debug",
     "message":"hello, world",
-    "time":"2021-03-03T17:23:25.73124"
+    "time":"2021-03-03T17:23:25.731243Z"
   }
 
 =head2 Formatted message
@@ -291,7 +312,7 @@ Output is a B<single line> with JSON like:
     "category":"main",
     "level":"debug",
     "message":"a formatted string with 2 tokens",
-    "time":"2021-03-03T17:23:25.73124"
+    "time":"2021-03-03T17:23:25.731243Z"
   }
 
 =head2 Single hashref
@@ -306,7 +327,7 @@ Output is a B<single line> with JSON like:
       "category":"main",
       "level":"debug",
       "message":"the message",
-      "time":"2021-03-03T17:23:25.73124",
+      "time":"2021-03-03T17:23:25.731243Z",
       "tracker":42
     }
 
@@ -331,7 +352,7 @@ Output is a B<single line> with JSON like:
     },
     "level":"debug",
     "message":"the message",
-    "time":"2021-03-03T17:23:25.73124",
+    "time":"2021-03-03T17:23:25.731243Z",
     "tracker":42
   }
 
@@ -351,7 +372,7 @@ Output is a B<single line> with JSON like:
       [1,2,3]
     ],
     "message":"the message",
-    "time":"2021-03-03T17:23:25.73124",
+    "time":"2021-03-03T17:23:25.731243Z",
     "tracker":42
 }
 
@@ -372,7 +393,7 @@ Output is a B<single line> with JSON like:
     "category":"main",
     "level":"debug",
     "message":"hello, world",
-    "time":"2021-03-03T17:23:25.73124"
+    "time":"2021-03-03T17:23:25.731243Z"
   }
 
 =head1 SEE ALSO
