@@ -32,7 +32,7 @@ subtest 'plain string' => sub {
             category => 'main',
             context  => 'here & now',
             level    => 'debug',
-            time     => re('^\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}.\d{0,5}$'),
+            time     => re('^\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}.\d{0,6}Z$'),
         },
         'plain string logged as-is',
     );
@@ -53,7 +53,7 @@ subtest 'structured data' => sub {
         foo       => 'bar',
         level     => 'debug',
         message   => 'Some message',
-        time      => re('^\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}.\d{0,5}$'),
+        time      => re('^\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}.\d{0,6}Z$'),
     };
 explain last_line();
 
