@@ -11,7 +11,7 @@ BEGIN {
 }
 
 use Log::Any '$log';
-use Log::Any::Adapter 'JSON', $tempfile->opena, format_message => 0;
+use Log::Any::Adapter 'JSON', $tempfile->opena, without_formatting => 1;
 
 # last line logged
 sub last_line {
@@ -22,7 +22,14 @@ sub last_line {
 ##
 subtest 'message with formatting codes' => sub {
     $log->debug('%s and %d');
-    is last_line()->{message}, '%s and %d',                           'format codes ignored';
+    is last_line()->{message}, '%s and %d', 'format codes ignored';
+};
+
+##
+subtest 'message with formatting codes and extra scalars' => sub {
+    $log->debug('%s and %d', 'foo', 'bar');
+    is last_line()->{message}, '%s and %d',                       'format codes ignored';
+    is_deeply last_line()->{additional_messages}, ['foo', 'bar'], 'extra messages present';
 };
 
 ##
