@@ -2,10 +2,17 @@ Changes file for Log::Any::Adapter::JSON
 
 {{$NEXT}}
 
+  - Allow disabling message string formatting
+    Thanks Dan Michael O. Heggø!
+
+  - Allow choosing to timestamp the log message in localtime
+
+  - Extend timestamp to microseconds and include TZ
+
 1.08      2021-03-04 18:21:40-05:00 America/New_York
 
   - Update prereqs (strictures is v 2)
-  
+
 1.07      2021-03-04 06:31:39-05:00 America/New_York
 
   - Skip pipe test on MSWin32
